--- a/main.ipynb
+++ b/main.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "openai.api_key = \"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\""
+    "openai.api_key = \"KEY\""
    ]
   },
   {
@@ -30,7 +30,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Inserisci il testo dell'articolo:  Il governo confonde la Meta di Zuckerberg con un’azienda di Reggio Emilia 13 GENNAIO 2023 - 09:07 di Redazione  In una risposta scritta al deputato Pd Fossi il ministero del Lavoro parla di “unità produttive” in Emilia-Romagna  In una risposta a un’interrogazione parlamentare del deputato del Partito Democratico Emiliano Fossi il governo Meloni ha confuso la Meta di Mark Zuckerberg con un’azienda che ha sede a Reggio Emilia. Lo ha fatto sapere lo stesso deputato su Facebook. Fossi chiedeva infatti lumi sulla sede milanese del social network blu: «In una lettera ai lavoratori venne annunciato a inizio novembre il taglio del 13 per cento del personale, quantificato in oltre 11mila dipendenti. Nonostante la maggior parte dei dipendenti di Meta si trovino negli Stati Uniti, esistono sedi nazionali anche in Italia. Da quanto emerge dai media la sede italiana di Milano sarà interessata da 22 licenziamenti a fronte di 127 dipendenti. E non è ancora chiaro cosa succederà ai dipendenti al termine della procedura di licenziamento collettivo».   L’errore del ministero del Lavoro Nella risposta scritta del ministero del Lavoro diretto da Marina Calderone invece si parla di una “unità produttiva” in via Oberdan a Reggio Emilia. E si annuncia anche un «verbale d’accordo» in cui «l’intervento della cassa integrazione straordinaria è richiesto per un numero massimo di 41 lavoratori». Mentre l’azienda «si impegna a ricollocare su unità produttive site in Reggio Emilia i dipendenti che non si renderanno disponibili ad aderire al piano di esuberi. Allo stato», prosegue il documento, «non sono state invece riferite analoghe iniziative rispetto alla sede di Milano, né l’Ispettorato del lavoro di Milano ha comunicato sussistere precedenti ispettivi per quanto riguarda la società Meta». Anche se «il Ministero delle Imprese e del Made in Italy ha fatto presente che non è stato attivato un tavolo ministeriale che coinvolge la sede della multinazionale Meta, dichiarandosi disponibile a valutare iniziative finalizzate alla salvaguardia dell’attività aziendale e alla tutela del perimetro occupazionale». «Con la…meta questo governo ha dei problemi: non ne raggiunge mai una», ha scritto Fossi su Facebook. «Anzi, raggiunge sempre quella sbagliata. Come con la benzina: Meloni voleva ridurne il costo, non mi pare che sia andata così. Hanno fatto confusione, anche stavolta».\n"
@@ -320,16 +320,16 @@
    "outputs": [],
    "source": [
     "\n",
-    "ACCESS_KEY = '816751607358615553-vI0llxwtKe2ymhRE4mZlDlEWwNjc6Df'\n",
-    "ACCESS_SECRET = 'PtZOxjPbsRkBXceY7UK4X3okBXAc85u962sqIkuc8xtRD'\n",
-    "CONSUMER_KEY = 'E90jHYF9MNbgMTiuRg3nTcBq7'\n",
-    "CONSUMER_SECRET = 'tKcHN0Fh4xMKX4lZBxtRtZRvDENZ14tSs72ZaO0x1StsOYQWHm'\n",
+    "ACCESS_KEY = 'TWITTER'\n",
+    "ACCESS_SECRET = 'TWITTER'\n",
+    "CONSUMER_KEY = 'TWITTER'\n",
+    "CONSUMER_SECRET = 'TWITTER'\n",
     "\n",
     "\n",
     "\n",
     "# autentico l'applicazione su Twitter\n",
     "\n",
-    "api = tweepy.Client(bearer_token='AAAAAAAAAAAAAAAAAAAAAAZ6lAEAAAAA2dH52W3hr1nXu3OlwHmS2Oqf7Ak%3DQM2yj296g9m2GxW5YgaoKAcaRkdZFqQnVLcMHbqUWHggMcIJl5',\n",
+    "api = tweepy.Client(bearer_token='%TWITTER',\n",
     "                    access_token=ACCESS_KEY,\n",
     "                    access_token_secret=ACCESS_SECRET,\n",
     "                    consumer_key=CONSUMER_KEY,\n",
